update logic create post
